--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@ghostery/adblocker-electron": "^2.1.1",
     "@xhayper/discord-rpc": "^1.2.0",
     "axios": "^1.7.7",
-    "chalk": "4.1.2"
+    "chalk": "4.1.2",
+    "i18next": "^24.0.2"
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.8",
